--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 <center><h3>  </h3>
    <!-- Liens -->
       <ul>
-      <p><a href="https://Laporte2004.github.io/bibliographie.html">Faire une commande ici</a></p></li>
+      <p><a href="https://Laporte2004.github.io/calculecommande.html">Faire une commande ici</a></p></li>
       
        </ul></center>
    </body>
